--- a/index.html
+++ b/index.html
@@ -11,6 +11,81 @@
   <title>Document</title>
 </head>
 <body>
-    
+  <header class="banner-container">
+    <img src="images/home-banner.jpg" alt class="banner__img">
+    <button class="menu__btn" >
+      <img src="./images/menu-hamburger.png" alt>
+    </button>
+    <nav class="menu__navegation" >
+      <a href="menu__links">Global Traveler</a>
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a class="menu__links" href="index.html">Home</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__links" href="destinieslist.html">Destinations</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__links" href="hotelslist.html">Hotels</a>
+        </li>
+        <li class="menu__item">
+          <button id="myBtn" class='darkButton'>Sing In</button>
+        </li>
+      </ul>
+    </nav>
+    <div>
+      <h1>Global Traveler</h1>
+      <p>You might not be able to become a bird and fly to places – but you surely can fly across the world with our travel agency as your wings.</p>
+    </div>
+  </header>
+
+  <div>
+    <h2>Our destinies</h2>
+    <div>
+      <a href="#"></a>
+      <a href="#"></a>
+      <a href="#"></a>
+      <a href="#"></a>
+    </div>
+  </div>
+
+  <div>
+    <img src="/images/adventure-banner.jpg" alt="">
+    <h2>Adventure</h2>
+    <p>Your Perfect Adventure Experience</p>
+    <p>Activities that may be of interest to you</p>
+    <button>Let´s see</button>
+  </div>
+
+  <div>
+    <img src="/images/activity-name-banner.jpg" alt="">
+    <h2>Accommodations</h2>
+    <p>Come and see our selection of hotels</p>
+    <p>Hotels that may be of interest to you </p>
+    <button>Let´s see</button>
+  </div>
+
+  <footer>
+    <h2>Global Traveler</h2>
+
+    <ul>
+      <li>Social Media</li>
+      <li>Facebook</li>
+      <li>Instagram</li>
+    </ul>
+
+    <ul>
+      <li>Services</li>
+      <li>Hotels</li>
+      <li>Destinies</li>
+      <li>Activities</li>
+    </ul>
+
+    <ul>
+      <li>Contact Us</li>
+      <li>(253) 895-8187</li>
+      <li>globaltraveler@gmail.com</li>
+    </ul>
+  </footer>
 </body>
 </html>
